--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ dotenvy = { version = "0.15.7", optional = true }
 embedded-graphics = { version = "0.8.1", optional = true }
 embedded-svc = { version = "0.28.1", optional = true } # TODO - HTTP request content_len()
 envy = { version = "0.4.2", optional = true }
-heapless = { version = "0.9.1", optional = true }
+heapless = { version = "=0.8", optional = true } # TODO - обновить после esp-idf-svc
 hmac = { version = "0.12.1", optional = true }
 http = { version = "1.3.1", optional = true }
 jwt = { version = "0.16.0", optional = true }
@@ -208,12 +208,14 @@ log_webconsole = [
 ## Компонент аутентификации
 cmp_auth = ["executor", "dep:jwt", "dep:hmac", "dep:sha2"]
 
-## Компоненты для работы с микроконтроллером ESP
 cmp_esp = [
     "executor",
     "single-thread",
+    "log_esp",
     # TODO - удалить
     "serde_postcard",
+    # TODO - удалить
+    "dep:bincode",
     "dep:embedded-graphics",
     "dep:embedded-svc",
     "dep:heapless",
@@ -221,7 +223,7 @@ cmp_esp = [
     "dep:ws2812-esp32-rmt-driver",
     "dep:url",
     "tokio?/time",
-]
+] ## Компоненты для работы с микроконтроллером ESP
 
 ## Компонент http-клиент
 cmp_http_client = [
