--- a/target_config.json
+++ b/target_config.json
@@ -14,7 +14,9 @@
         "cmp_http_client",
         "cmp_http_server",
         "cmp_influxdb",
+        "cmp_linux_can",
         "cmp_linux_gpio",
+        "cmp_linux_i2c_master",
         "cmp_linux_spi_master",
         "cmp_linux_uart_master",
         "cmp_math",
@@ -24,6 +26,7 @@
         "cmp_plc",
         "cmp_slint",
         "cmp_surrealdb",
+        "cmp_svg",
         "cmp_system_info",
         "cmp_telegram",
         "cmp_timescaledb",
@@ -36,7 +39,14 @@
     {
       "name": "aarch64-linux-android",
       "toolchain": "+stable",
-      "features": ["executor", "log_console", "cmp_http_client", "cmp_mqtt_client", "cmp_slint"],
+      "features": [
+        "executor",
+        "log_console",
+        "cmp_http_client",
+        "cmp_mqtt_client",
+        "cmp_slint",
+        "cmp_svg"
+      ],
       "add_feat": ["", "single-thread"]
     },
     {
@@ -53,7 +63,9 @@
         "cmp_http_client",
         "cmp_http_server",
         "cmp_influxdb",
+        "cmp_linux_can",
         "cmp_linux_gpio",
+        "cmp_linux_i2c_master",
         "cmp_linux_spi_master",
         "cmp_linux_uart_master",
         "cmp_modbus_client",
@@ -63,6 +75,7 @@
         "cmp_plc",
         "cmp_slint",
         "cmp_surrealdb",
+        "cmp_svg",
         "cmp_system_info",
         "cmp_telegram",
         "cmp_timescaledb",
@@ -82,9 +95,25 @@
         "log_loki",
         "log_tokio",
         "cmp_filesystem",
+        "cmp_http_client",
+        "cmp_http_server",
+        "cmp_influxdb",
+        "cmp_linux_can",
         "cmp_linux_gpio",
+        "cmp_linux_i2c_master",
         "cmp_linux_spi_master",
-        "cmp_timescaledb"
+        "cmp_linux_uart_master",
+        "cmp_math",
+        "cmp_modbus_client",
+        "cmp_mqtt_client",
+        "cmp_plc",
+        "cmp_slint",
+        "cmp_svg",
+        "cmp_system_info",
+        "cmp_telegram",
+        "cmp_timescaledb",
+        "cmp_websocket_client",
+        "cmp_websocket_server"
       ],
       "add_feat": ["", "single-thread"]
     },
