--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ version = "0.0.84"
 
 
 [dependencies]
-anyhow = { version = "1.0.99" }
+anyhow = { version = "1.0.100" }
 bitvec = { version = "1.0.1" }
 bytes = { version = "1.10.1" }
 byteorder = { version = "1.5.0" }
@@ -22,10 +22,10 @@ crc = { version = "3.3.0" }
 document-features = { version = "0.2.11" }
 # TODO - заменить на web-time
 instant = { version = "0.1.13", features = ["wasm-bindgen"] }
-serde = { version = "1.0.225", features = ["derive"] }
+serde = { version = "1.0.226", features = ["derive"] }
 strum = { version = "0.27.2", features = ["derive"] }
 thiserror = { version = "2.0.16" }
-time = { version = "0.3.43", features = ["formatting", "macros", "serde"] }
+time = { version = "0.3.44", features = ["formatting", "macros", "serde"] }
 tracing = { version = "0.1.41", features = ["log"] }
 uuid = { version = "1.18.1", features = [
     "macro-diagnostics",
@@ -37,9 +37,9 @@ uuid = { version = "1.18.1", features = [
 any_spawner = { version = "0.3.0", optional = true }
 async-trait = { version = "0.1.89", optional = true }
 axum = { version = "0.8.4", optional = true }
-bincode = { version = "1.3.3", optional = true }
+bincode = { version = "=1.3.3", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
-console_error_panic_hook = { version = " 0.1.7", optional = true }
+console_error_panic_hook = { version = "0.1.7", optional = true }
 console-subscriber = { version = "0.4.1", optional = true }
 dotenvy = { version = "0.15.7", optional = true }
 embedded-graphics = { version = "0.8.1", optional = true }
@@ -82,7 +82,7 @@ sqlx = { version = "0.8.6", features = [
 ], optional = true }
 ssd1306 = { version = "0.10.0", optional = true }
 sudo = { version = "0.6.0", optional = true }
-surrealdb = { version = "2.3.9", optional = true }
+surrealdb = { version = "2.3.10", optional = true }
 sysinfo = { version = "0.37.0", optional = true }
 teloxide = { version = "0.17.0", optional = true, features = ["macros"] }
 tokio = { version = "^1.37.0", features = [
