--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ crc = { version = "3.3.0" }
 document-features = { version = "0.2.11" }
 # TODO - заменить на web-time
 instant = { version = "0.1.13", features = ["wasm-bindgen"] }
-serde = { version = "1.0.226", features = ["derive"] }
+serde = { version = "1.0.227", features = ["derive"] }
 strum = { version = "0.27.2", features = ["derive"] }
 thiserror = { version = "2.0.16" }
 time = { version = "0.3.44", features = ["formatting", "macros", "serde"] }
@@ -38,6 +38,7 @@ any_spawner = { version = "0.3.0", optional = true }
 async-trait = { version = "0.1.89", optional = true }
 axum = { version = "0.8.4", optional = true }
 bincode = { version = "=1.3.3", optional = true }
+ciborium = { version = "0.2.2", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 console-subscriber = { version = "0.4.1", optional = true }
@@ -67,8 +68,9 @@ postcard = { version = "1.1.3", features = [
 quick-xml = { version = "0.38.3", optional = true }
 reactive_stores = { version = "0.2.5", optional = true }
 reqwest = { version = "0.12.23", features = ["json"], optional = true }
-rumqttc = { version = "0.25.0", optional = true }
+rmp-serde = { version = "1.3.0", optional = true }
 rppal = { version = "0.22.1", optional = true }
+rumqttc = { version = "0.25.0", optional = true }
 palette = { version = "0.7.6", features = ["named"], optional = true }
 serde_json = { version = "1.0.145", optional = true }
 sha2 = { version = "0.10.9", optional = true }
@@ -169,8 +171,7 @@ cfg_aliases = "0.2.1"
 
 [features]
 
-# TODO - удалить serde-json из дефолтных фич, когда все компоненты будут готовы
-default = ["serde_json"]
+default = []
 
 ## Конфигурирование через переменные
 env_vars = ["dep:clap", "dep:dotenvy", "dep:envy", "dep:toml", "dep:url"]
@@ -181,8 +182,19 @@ executor = ["dep:async-trait", "dep:futures", "dep:tokio", "dep:tokio-util"]
 ## Работа в однопоточном режиме
 single-thread = []
 
+## Сериализация и десериализация в CBOR
+serde_cbor = ["dep:ciborium"]
+
+## Сериализация и десериализация в JSON
 serde_json = ["dep:serde_json"]
+
+## Сериализация и десериализация в MessagePack
+serde_messagepack = ["dep:rmp-serde"]
+
+## Сериализация и десериализация в Postcard
 serde_postcard = ["dep:postcard"]
+
+## Сериализация и десериализация в TOML
 serde_toml = ["dep:toml"]
 
 log_console = ["dep:tracing-subscriber"]
@@ -291,6 +303,8 @@ cmp_os_process = ["executor", "tokio?/process"]
 cmp_plc = ["executor"]
 
 ## Работа с периферией Raspberry Pi
+# 
+# TODO - удалить когда закопают стенд
 cmp_raspberrypi = ["executor", "dep:bincode", "serde_postcard", "dep:rppal"]
 
 ## Компонент пользовательского интерфейса, реализованного с помощью библиотеки Slint
