--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,6 @@ byteorder = { version = "1.5.0" }
 chrono = { version = "0.4.42", features = ["serde"] }
 crc = { version = "3.3.0" }
 document-features = { version = "0.2.11" }
-# TODO - заменить на web-time
-instant = { version = "0.1.13", features = ["wasm-bindgen"] }
 serde = { version = "1.0.227", features = ["derive"] }
 strum = { version = "0.27.2", features = ["derive"] }
 thiserror = { version = "2.0.16" }
@@ -33,6 +31,7 @@ uuid = { version = "1.18.1", features = [
     "v4",
     "js",
 ] }
+web-time = { version = "1.1.0", features = ["serde"] }
 
 any_spawner = { version = "0.3.0", optional = true }
 async-trait = { version = "0.1.89", optional = true }
@@ -126,7 +125,6 @@ ws2812-esp32-rmt-driver = { version = "0.12.0", features = [
 
 rsiot-macros = { version = "0.0.73", path = "./rsiot-macros" }
 
-
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gloo = { version = "0.11.0", features = [
     "dialogs",
@@ -137,7 +135,6 @@ gloo = { version = "0.11.0", features = [
     "utils",
 ] }
 tracing-web = { version = "0.1.3", optional = true }
-web-time = { version = "1.1.0", features = ["serde"] }
 
 
 [target.'cfg(any(target_arch = "aarch64", target_arch = "arm", target_arch = "x86_64"))'.dependencies]
@@ -160,7 +157,7 @@ tokio = { version = "^1.36.0", features = [
 
 
 [dev-dependencies]
-serde_json = { version = "1.0.145" }
+# serde_json = { version = "1.0.145" }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"] }
 itertools = "0.14.0"
 rsiot-devices = { path = "../rsiot-devices" }
@@ -303,7 +300,7 @@ cmp_os_process = ["executor", "tokio?/process"]
 cmp_plc = ["executor"]
 
 ## Работа с периферией Raspberry Pi
-# 
+#
 # TODO - удалить когда закопают стенд
 cmp_raspberrypi = ["executor", "dep:bincode", "serde_postcard", "dep:rppal"]
 
