add Lagged message if MsgBus slow

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -40,56 +40,56 @@
           //   "cmp_timescaledb"
           // ]
           // ---- riscv32imc-esp-espidf ------------------------------------------------------------
-          "target": "riscv32imc-esp-espidf",
-          "features": [
-            // "executor",
-            // "log_esp",
-            "cmp_esp",
-            "cmp_plc",
-            "serde_cbor",
-            "serde_json"
-          ]
-          // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
-          // "target": "x86_64-unknown-linux-gnu",
+          // "target": "riscv32imc-esp-espidf",
           // "features": [
-          // "rustdoc",
           // "executor",
-          // "single-thread",
-          // "env_vars",
-          // "cmp_auth",
-          // "cmp_filesystem",
-          // "cmp_http_client",
-          // "cmp_http_server"
-          // "cmp_filesystem",
-          // "cmp_influxdb",
-          // "cmp_linux_can",
-          // "cmp_linux_gpio"
-          // "cmp_linux_i2c_master",
-          // "cmp_linux_spi_master",
-          // "cmp_linux_uart_master",
-          // "cmp_math"
-          // "cmp_modbus_client"
-          // "cmp_mqtt_client",
+          // "log_esp",
+          // "cmp_esp",
           // "cmp_plc",
-          // "cmp_os_process",
-          // "cmp_slint"
-          // "cmp_surrealdb"
-          // "cmp_svg"
-          // "cmp_system_info"
-          // "cmp_telegram"
-          // "cmp_timescaledb",
-          // "cmp_websocket_client",
-          // "cmp_websocket_server",
-          // "log_console",
-          // "log_file",
-          // "log_loki",
-          // "log_tokio"
-          //   "serde_json",
-          //   "serde_postcard",
-          //   "serde_toml",
-          // "serde_messagepack",
-          // "serde_cbor"
+          // "serde_cbor",
+          // "serde_json"
           // ]
+          // ---- x86_64-unknown-linux-gnu ---------------------------------------------------------
+          "target": "x86_64-unknown-linux-gnu",
+          "features": [
+            // "rustdoc",
+            "executor"
+            // "single-thread",
+            // "env_vars",
+            // "cmp_auth",
+            // "cmp_filesystem",
+            // "cmp_http_client",
+            // "cmp_http_server"
+            // "cmp_filesystem",
+            // "cmp_influxdb",
+            // "cmp_linux_can",
+            // "cmp_linux_gpio"
+            // "cmp_linux_i2c_master",
+            // "cmp_linux_spi_master",
+            // "cmp_linux_uart_master",
+            // "cmp_math"
+            // "cmp_modbus_client"
+            // "cmp_mqtt_client",
+            // "cmp_plc",
+            // "cmp_os_process",
+            // "cmp_slint"
+            // "cmp_surrealdb"
+            // "cmp_svg"
+            // "cmp_system_info"
+            // "cmp_telegram"
+            // "cmp_timescaledb",
+            // "cmp_websocket_client",
+            // "cmp_websocket_server",
+            // "log_console",
+            // "log_file",
+            // "log_loki",
+            // "log_tokio"
+            //   "serde_json",
+            //   "serde_postcard",
+            //   "serde_toml",
+            // "serde_messagepack",
+            // "serde_cbor"
+          ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
           // "features": [
