--- a/Cargo.toml
+++ b/Cargo.toml
@@ -343,7 +343,7 @@ cmp_webstorage = ["executor"]
 rustdoc = []
 
 ## Устаревшие компоненты
-deprecated = []
+deprecated_stend = []
 
 
 [package.metadata.docs.rs]
@@ -358,10 +358,6 @@ name = "cmp_derive"
 path = "examples/cmp_derive/cmp_derive.rs"
 
 [[example]]
-name = "cmp_external_fn_process"
-path = "examples/cmp_external_fn_process/cmp_external_fn_process.rs"
-
-[[example]]
 name = "cmp_esp"
 path = "examples/cmp_esp/cmp_esp.rs"
 doc-scrape-examples = true
@@ -369,10 +365,6 @@ doc-scrape-examples = true
 [[example]]
 name = "cmp_esp_i2c_slave"
 path = "./examples/cmp_esp/cmp_esp_i2c_slave.rs"
-
-[[example]]
-name = "cmp_esp_nvs"
-path = "examples/cmp_esp_nvs/cmp_esp_nvs.rs"
 
 [[example]]
 name = "cmp_esp_led"
@@ -419,10 +411,6 @@ path = "examples/cmp_http_server_and_client/cmp_http_server.rs"
 [[example]]
 name = "cmp_influxdb"
 path = "examples/cmp_influxdb/cmp_influxdb.rs"
-
-[[example]]
-name = "cmp_inject_periodic"
-path = "examples/cmp_inject_periodic/cmp_inject_periodic.rs"
 
 [[example]]
 name = "esp_mqtt_client_publisher"
