split snp_in_out to MsgBusInput and MsgBusOutput

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -77,7 +77,7 @@
             // "cmp_os_process",
             // "cmp_slint"
             // "cmp_surrealdb"
-            // "cmp_svg"
+            "cmp_svg",
             // "cmp_system_info"
             // "cmp_telegram"
             // "cmp_timescaledb",
