--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -67,20 +67,20 @@
           // "cmp_filesystem",
           // "cmp_influxdb",
           // "cmp_linux_can",
-          // "cmp_linux_gpio"
+          // "cmp_linux_gpio",
           // "cmp_linux_i2c_master",
           // "cmp_linux_spi_master",
           // "cmp_linux_uart_master",
-          // "cmp_math"
+          // "cmp_math",
           // "cmp_modbus_client",
           // "cmp_mqtt_client",
           // "cmp_plc",
           // "cmp_os_process",
           // "cmp_slint",
-          // "cmp_surrealdb"
+          // "cmp_surrealdb",
           // "cmp_svg",
-          // "cmp_system_info"
-          // "cmp_telegram"
+          // "cmp_system_info",
+          // "cmp_telegram",
           // "cmp_timescaledb",
           // "cmp_websocket_client",
           // "cmp_websocket_server",
@@ -88,11 +88,11 @@
           // "log_file",
           // "log_loki",
           // "log_tokio"
-          // "serde_json",
-          // "serde_postcard",
-          // "serde_toml",
-          // "serde_messagepack",
-          // "serde_cbor"
+          //   "serde_json",
+          //   "serde_postcard",
+          //   "serde_toml",
+          //   "serde_messagepack",
+          //   "serde_cbor"
           // ]
           // ---- wasm32-unknown-unknown -----------------------------------------------------------
           // "target": "wasm32-unknown-unknown",
